[tool.poetry]
name = "enphase-to-mqtt"
version = "0.1.0"
description = ""
authors = ["Marco Crapts <mcrapts@gmail.com>"]
readme = "README.md"
packages = [{include = "enphase_to_mqtt"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
python-dotenv = "^1.0.0"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
