[project]
name = "enphase-to-mqtt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.2",
    "paho-mqtt>=2.1.0",
    "pyjwt>=2.9.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
log_level = "INFO"
asyncio_mode = "strict"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "fastapi>=0.115.3",
    "freezegun>=1.5.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.1",
    "uvicorn>=0.32.0",
]
